--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ CommentedCode/01-Principles/InferenceMethods.html
 CommentedCode/02-Samplers/Rejection/ExampleRejectionSampler.html
 
 *.html
+
+LectureNotes/article.pdf
