--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ CommentedCode/02-Samplers/Rejection/ExampleRejectionSampler.html
 *.html
 
 LectureNotes/article.pdf
+
+CommentedCode/02-Samplers/SMC/Rbiips-examples/
