--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ CommentedCode/02-Samplers/Rejection/ExampleRejectionSampler.html
 LectureNotes/article.pdf
 
 CommentedCode/02-Samplers/SMC/Rbiips-examples/
+
+CommentedCode/02-Samplers/MCMC/metropolis_ex/metrop.gif
