updates / scripts felix

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ LectureNotes/article.pdf
 CommentedCode/02-Samplers/SMC/Rbiips-examples/
 
 CommentedCode/02-Samplers/MCMC/metropolis_ex/metrop.gif
+
+CommentedCode/04-StandardModels/GLMM/Beetles_cache/
