--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ CommentedCode/02-Samplers/SMC/Rbiips-examples/
 CommentedCode/02-Samplers/MCMC/metropolis_ex/metrop.gif
 
 CommentedCode/04-StandardModels/GLMM/Beetles_cache/
+ToInclude/
