Created initial package

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ CommentedCode/02-Samplers/MCMC/metropolis_ex/metrop.gif
 
 CommentedCode/04-StandardModels/GLMM/Beetles_cache/
 ToInclude/
+.Rproj.user
